--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My Waiting</title>
+	<link rel="icon" href="public/img/logo.png">
 	<link rel="stylesheet" href="public/lib/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="public/lib/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="public/lib/leaflet/dist/leaflet.css">
 	<link rel="stylesheet" href="public/css/component.min.css">
 	<link rel="stylesheet" href="public/css/theme.min.css">
@@ -13,41 +15,7 @@
 <body>
 	<div id="leaflet-map"></div>
 	<div class="mid-menu" id="menu">
-		<span><i class="fa fa-list"></i></span>
-		<ul id="menu-list">
-			<!-- <li>
-				<a href="#" class="hvr-sweep-to-right">
-					<div class="img-container">
-						<img src="public/img/data/1.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text">KEN</div>
-				</a>
-			</li>
-			<li>
-				<a href="#" class="hvr-sweep-to-right">
-					<div class="img-container">
-						<img src="public/img/data/2.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text">JINMAO</div>
-				</a>
-			</li>
-			<li>
-				<a href="#" class="hvr-sweep-to-right">
-					<div class="img-container">
-						<img src="public/img/data/3.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text">KK</div>
-				</a>
-			</li>
-			<li>
-				<a href="#" class="hvr-sweep-to-right">
-					<div class="img-container">
-						<img src="public/img/data/4.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text">ALAN</div>
-				</a>
-			</li> -->
-		</ul>
+		<ul id="menu-list"></ul>
 	</div>
 	<!-- JS Lib -->
 	<script src="public/lib/jquery/dist/jquery.min.js"></script>
@@ -56,7 +24,6 @@
 	<script src="public/lib/moment/min/moment.min.js"></script>
 	<script src="public/lib/parse/parse.min.js"></script>
 	<script src="app/js/main.js"></script>
-	<!-- <script src="public/js/main.min.js"></script> -->
 </body>
 
 </html>
