--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My Waiting</title>
-	<link rel="icon" href="public/img/logo.png">
+	<link rel="icon" href="public/img/icon.png">
 	<link rel="stylesheet" href="public/lib/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="public/lib/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="public/lib/leaflet/dist/leaflet.css">
